[package]
name = "tokiobeam_channel"
version = "0.2.4"
authors = ["zenix <zenixls2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
zerocap = []

[dependencies]
tokio = { version = "0.2", features = ["stream", "sync", "time", "rt-core", "rt-threaded"] }
crossbeam = "0.7.3"
futures = "0.3"
